# mtg-companion

./: package-lock.json  package.json  vite.config.ts
src/: App.tsx  CardsCollection.tsx  NewCardForm.tsx  main.tsx
src-tauri/: .config.toml  Cargo.toml  file.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/card/: mod.rs
src-tauri/src/configuration/: mod.rs
src-tauri/src/storage/: mod.rs
