[package]
name = "mtg-companion"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mtg_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plogger = "0.0.1"
uuid = { version = "1.11.0", features = ["fast-rng", "v7"] }
log = "0.4.22"
r2d2 = "0.8.10"
toml = "0.8.19"
r2d2_sqlite = "0.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = "0.32.1"
dirs = "5.0.1"

